store created and accessed times on the mapdb value, fixed map modification listener